--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch~=1.13
+torch>=1.13
 torchvision
 opencv-python
 decord
@@ -10,5 +10,3 @@ timm
 einops
 wandb
 scikit-video
-thop==0.0.31-2005241907
-onnx
